--- a/index.html
+++ b/index.html
@@ -17,16 +17,11 @@
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar">
 
-    <!--=====Preloader=====-->
-    <div class="preloder">
-        <div class="load">
-            <hr/><hr/><hr/><hr/>
-          </div>
-    </div>
+   
 
 <!--=============== Header Part Goes Here Bellow ====================-->
 
-<nav class="navbar navbar-expand-md nav-new " id="navbar">
+<nav class="navbar navbar-expand-md  " id="navbar">
     <div class="container">
       <a class="navbar-brand" href="#">
           <img src="images/logo.png" alt="logo">
